# pygemc

./: .gitignore  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  meson.build  pyproject.toml
.github/workflows/: ci.yml  dev_release.yml  publish_pypi.yml  pygemc_tests.yml  trigger_src_dev_release.yml  trigger_src_docker_deploy.yml  trigger_src_tests.yml
ci/: update-devmd.sh  update_milestone_issues.py
releases/: dev.md  template.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
src/pygemc/: __init__.py
src/pygemc/analyzer/: __init__.py  __main__.py  cli.py  dataset.py  plotting.py  readers.py
src/pygemc/api/: __init__.py  g4_units.py  gconfiguration.py  gmaterial.py  gsqlite.py  gvolume.py  pyvista_api.py  run_geometry.py  solid_html.py  system_template.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_gconfiguration_yaml.py  test_geometry.py  test_gsqlite.py  test_pyvista_logging.py
